<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterActivityLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".RegisterScreen">

    <!--TODO: TextView für den CountSigns für Passwort-->

    <ImageButton
        android:id="@+id/backButtonRegisterActivity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="250dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textValidEmail"
        app:layout_constraintEnd_toStartOf="@+id/logoView"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/car_ui_icon_arrow_back"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="@font/gothammedium1"
        android:text="@string/Registrieren"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="159dp"
        android:fontFamily="@font/gothammedium1"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:drawableStartCompat="@drawable/ic_email_dark"
        app:layout_constraintBottom_toTopOf="@+id/textValidEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <TextView
        android:id="@+id/textValidEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="69dp"
        android:fontFamily="@font/gothammedium1"
        android:text="@string/emailAngeben"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textValidPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="85dp"
        android:fontFamily="@font/gothammedium1"
        android:text="@string/passwordEingeben"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/exampleEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textViewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textValidEmail"
        tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="134dp"
        android:fontFamily="@font/gothammedium1"
        android:text="@string/passwort"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:drawableStartCompat="@drawable/ic_lock_dark"
        app:layout_constraintBottom_toTopOf="@+id/textValidPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/passwort_eingeben"
        android:background="@drawable/rounded_edittext"
        android:textAlignment="center"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textValidPassword"
        tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/confirmPasswort"
        android:background="@drawable/rounded_edittext"
        android:textAlignment="center"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Registrieren2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/textViewRegister"
        app:layout_constraintEnd_toStartOf="@+id/helpPasswordButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/weeklyplaner" />

    <ImageButton
        android:id="@+id/helpPasswordButton"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="#00FCF1FF"
        android:contentDescription="@string/helpPasswordView"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textValidPassword"
        app:layout_constraintTop_toTopOf="@+id/textViewPassword"
        app:srcCompat="@drawable/ic_helpbox"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>